hotfix - fixed margin-bottom issue that prevented overflow: hidden from working with MapBox container

--- a/src/components/pages/Nav/navCSS.css
+++ b/src/components/pages/Nav/navCSS.css
@@ -43,4 +43,5 @@
 
 #root {
   margin-top: 75px;
+  margin-bottom: -75px;
 }
